# wasm-life

./: Cargo.toml  README.md  index.js
src/: lib.rs
