[package]
name = "wasm-life"
version = "0.1.0"
authors = ["Chris Snape-Jenkinson"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-render = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features=["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window"] }
